--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,7 @@
 	<repositories>
 		<repository>
 			<id>Graphite-Official</id>
-			<url>https://graphite-official.com/repo/</url>
+			<url>https://maven.graphite-official.com/releases</url>
 		</repository>
 	</repositories>
 
